--- a/notebooks/eda_vnstock.ipynb
+++ b/notebooks/eda_vnstock.ipynb
@@ -2,19 +2,249 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from vnstock3 import Vnstock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<vnstock3.common.vnstock.Vnstock at 0x17576179ba0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vnstock = Vnstock()\n",
+    "vnstock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-24 08:54:20,830 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<vnstock3.common.data.data_explorer.StockComponents at 0x1605fee24d0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock1 = vnstock.stock(symbol='HSG', source='VCI')\n",
+    "stock1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_symbols_list = stock1.listing.all_symbols()['ticker'].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_symbols_by_exchange = stock1.listing.symbols_by_exchange()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_symbols_by_industry_icb = stock1.listing.symbols_by_industries()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "industries_icb = stock1.listing.industries_icb()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     ACB\n",
+       "1     BCM\n",
+       "2     BID\n",
+       "3     BVH\n",
+       "4     CTG\n",
+       "5     FPT\n",
+       "6     GAS\n",
+       "7     GVR\n",
+       "8     HDB\n",
+       "9     HPG\n",
+       "10    MBB\n",
+       "11    MSN\n",
+       "12    MWG\n",
+       "13    PLX\n",
+       "14    POW\n",
+       "15    SAB\n",
+       "16    SHB\n",
+       "17    SSB\n",
+       "18    SSI\n",
+       "19    STB\n",
+       "20    TCB\n",
+       "21    TPB\n",
+       "22    VCB\n",
+       "23    VHM\n",
+       "24    VIB\n",
+       "25    VIC\n",
+       "26    VJC\n",
+       "27    VNM\n",
+       "28    VPB\n",
+       "29    VRE\n",
+       "Name: symbol, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vn30 = stock1.listing.symbols_by_group('VN30')\n",
+    "vn30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     AAA\n",
+       "1     ANV\n",
+       "2     ASM\n",
+       "3     BCG\n",
+       "4     BMP\n",
+       "     ... \n",
+       "65    VHC\n",
+       "66    VIX\n",
+       "67    VND\n",
+       "68    VPI\n",
+       "69    VSH\n",
+       "Name: symbol, Length: 70, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hose = stock1.listing.symbols_by_group('VNMidCap')\n",
+    "hose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     ACB\n",
+       "1     BCM\n",
+       "2     BID\n",
+       "3     BVH\n",
+       "4     CTG\n",
+       "5     FPT\n",
+       "6     GAS\n",
+       "7     GVR\n",
+       "8     HDB\n",
+       "9     HPG\n",
+       "10    MBB\n",
+       "11    MSN\n",
+       "12    MWG\n",
+       "13    PLX\n",
+       "14    POW\n",
+       "15    SAB\n",
+       "16    SHB\n",
+       "17    SSB\n",
+       "18    SSI\n",
+       "19    STB\n",
+       "20    TCB\n",
+       "21    TPB\n",
+       "22    VCB\n",
+       "23    VHM\n",
+       "24    VIB\n",
+       "25    VIC\n",
+       "26    VJC\n",
+       "27    VNM\n",
+       "28    VPB\n",
+       "29    VRE\n",
+       "Name: symbol, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock1.listing.symbols_by_group()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
