feat: give an example in my src code of handling pythonpath in code (not in environment variables)

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-25 14:14:55,363 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-10-25 16:49:57,760 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
@@ -70,13 +70,12 @@
     }
    ],
    "source": [
-    "connector = VnstockLibConnector(init_symbol='MBB')\n",
-    "connector.connect()"
+    "connector = VnstockLibConnector(init_symbol='MBB')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +181,7 @@
        "[1598 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,9 +191,129 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting full company info\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_info = connector.get_full_company_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>share_holder</th>\n",
+       "      <th>share_own_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tập đoàn Công nghiệp - Viễn thông Quân đội</td>\n",
+       "      <td>0.1476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tổng Công ty Đầu Tư Và Kinh Doanh Vốn Nhà Nước...</td>\n",
+       "      <td>0.0986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tổng Công ty Trực thăng Việt Nam - Công ty TNHH</td>\n",
+       "      <td>0.0846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Công ty TNHH MTV Tổng Công ty Tân Cảng Sài Gòn</td>\n",
+       "      <td>0.0711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lưu Trung Thái</td>\n",
+       "      <td>0.0012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Lê Văn Bé</td>\n",
+       "      <td>0.0011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Đỗ Văn Hưng</td>\n",
+       "      <td>0.0010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Trần Minh Đạt</td>\n",
+       "      <td>0.0007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Phạm Như Ánh</td>\n",
+       "      <td>0.0007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Khác</td>\n",
+       "      <td>0.2263</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        share_holder  share_own_percent\n",
+       "0         Tập đoàn Công nghiệp - Viễn thông Quân đội             0.1476\n",
+       "1  Tổng Công ty Đầu Tư Và Kinh Doanh Vốn Nhà Nước...             0.0986\n",
+       "2    Tổng Công ty Trực thăng Việt Nam - Công ty TNHH             0.0846\n",
+       "3     Công ty TNHH MTV Tổng Công ty Tân Cảng Sài Gòn             0.0711\n",
+       "4                                     Lưu Trung Thái             0.0012\n",
+       "5                                          Lê Văn Bé             0.0011\n",
+       "6                                        Đỗ Văn Hưng             0.0010\n",
+       "7                                      Trần Minh Đạt             0.0007\n",
+       "8                                       Phạm Như Ánh             0.0007\n",
+       "9                                               Khác             0.2263"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_info['shareholders']"
+   ]
   },
   {
    "cell_type": "markdown",
