feat: implement S3 connector

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -32,29 +32,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\CODE\\de_projects\\finance_hub\\src is already in sys.path\n",
-      "D:\\CODE\\de_projects\\finance_hub\\src is already in sys.path\n"
-     ]
-    }
-   ],
    "source": [
-    "from pipeline.commons.constants import VnstockDataSources\n",
-    "from pipeline.extract.vnstock_lib import VnstockLibExtractor"
+    "## Connector"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Connector"
+    "### VnStock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pipeline.commons.connectors.vnstock_lib import VnstockLibConnector"
    ]
   },
   {
@@ -472,6 +469,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### S3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import boto3\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pipeline.commons.connectors.s3 import S3BucketConnector\n",
+    "\n",
+    "# Configuration parameters for MinIO\n",
+    "config = {\n",
+    "    \"aws_access_key_id\": os.getenv('MINIO_ACCESS_KEY'),\n",
+    "    \"aws_secret_access_key\": os.getenv('MINIO_SECRET_KEY'),\n",
+    "    \"endpoint_url\": os.getenv('MINIO_URL'),\n",
+    "    \"bucket\": \"vnstock3\", \n",
+    "}\n",
+    "bucket_name = config[\"bucket\"]\n",
+    "\n",
+    "# Create an instance of the S3 connector\n",
+    "s3_connector = S3BucketConnector(config, bucket_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example DataFrame to write\n",
+    "data = {\n",
+    "    \"column1\": [1, 2, 3],\n",
+    "    \"column2\": [\"A\", \"B\", \"C\"]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Write DataFrame to S3 as JSON\n",
+    "key_json = \"test_connector/example1.json\"\n",
+    "s3_connector.write_df_to_s3(df, key_json, \"json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files in prefix: ['test_connector/example1.json']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List files in a prefix\n",
+    "prefix = \"test_connector/\"\n",
+    "files = s3_connector.list_file_in_prefix(prefix)\n",
+    "print(\"Files in prefix:\", files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "s3.Bucket(name='vnstock3')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3_connector._bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "s3.Bucket.objectsCollection(s3.Bucket(name='vnstock3'), s3.ObjectSummary)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3_connector._bucket.objects.filter(Prefix='data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extractor"
    ]
   },
@@ -483,7 +621,7 @@
    "source": [
     "import time\n",
     "import pandas as pd\n",
-    "from pipeline.commons.connectors.vnstock_lib import VnstockLibConnector\n",
+    "from pipeline.extract.vnstock_lib import VnstockLibExtractor\n",
     "from pipeline.commons.constants import DateTimeFormat"
    ]
   },
@@ -808,13 +946,6 @@
     "# except Exception as e:\n",
     "#     print(f\"Error writing to JSON file: {e}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
