[el] feat: el scripts for all stock data

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,21 +721,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\CODE\\de_projects\\finance_hub\\src is already in sys.path\n",
+      "D:\\CODE\\de_projects\\finance_hub\\src is already in sys.path\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 00:52:10,853 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-10-31 10:44:29,944 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\CODE\\de_projects\\finance_hub\\src is already in sys.path\n",
       "Connecting to VnstockLib: Symbol: VNN, Source: VCI\n",
       "Connected to VnstockLib.\n"
      ]
@@ -752,14 +759,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 00:52:11,281 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-10-31 10:44:30,369 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
@@ -774,7 +781,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 00:52:11,744 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-10-31 10:44:33,959 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
@@ -788,7 +795,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 00:52:12,171 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-10-31 10:44:34,394 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
@@ -802,7 +809,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 00:52:12,624 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-10-31 10:44:34,849 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
@@ -819,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -850,49 +857,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2024-10-30 17:52:11.738272+0000', tz='UTC')"
+       "symbol\n",
+       "MBB   2024-10-31 03:44:33.954043+00:00\n",
+       "VCB   2024-10-31 03:44:34.388914+00:00\n",
+       "VIC   2024-10-31 03:44:34.844432+00:00\n",
+       "VNM   2024-10-31 03:44:35.277768+00:00\n",
+       "Name: loaded_timestamp, dtype: datetime64[ns, UTC]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mbb_ts = df_all['loaded_timestamp'].groupby(df_all['symbol']).max()['MBB']\n",
-    "mbb_ts"
+    "max_ts = df_all['loaded_timestamp'].groupby(df_all['symbol']).max()\n",
+    "max_ts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'hub/metadata/stock/stock_quotes_state.json'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MBB 2024-10-31 03:44:33.954043+00:00\n",
+      "{'MBB': {'max_timestamp': '2024-10-31T03:44:33'}}\n",
+      "VCB 2024-10-31 03:44:34.388914+00:00\n",
+      "{'MBB': {'max_timestamp': '2024-10-31T03:44:33'}, 'VCB': {'max_timestamp': '2024-10-31T03:44:34'}}\n",
+      "VIC 2024-10-31 03:44:34.844432+00:00\n",
+      "{'MBB': {'max_timestamp': '2024-10-31T03:44:33'}, 'VCB': {'max_timestamp': '2024-10-31T03:44:34'}, 'VIC': {'max_timestamp': '2024-10-31T03:44:34'}}\n",
+      "VNM 2024-10-31 03:44:35.277768+00:00\n",
+      "{'MBB': {'max_timestamp': '2024-10-31T03:44:33'}, 'VCB': {'max_timestamp': '2024-10-31T03:44:34'}, 'VIC': {'max_timestamp': '2024-10-31T03:44:34'}, 'VNM': {'max_timestamp': '2024-10-31T03:44:35'}}\n"
+     ]
     }
    ],
    "source": [
     "metadata_file = 'hub/metadata/stock/stock_quotes_state.json'\n",
-    "metadata_file"
+    "\n",
+    "for symbol, ts in max_ts.items():\n",
+    "    print(symbol, ts)\n",
+    "    s3_connector.update_symbol_meta_timestamp(symbol, ts, metadata_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +938,7 @@
        "{'MBB': {'max_timestamp': '2024-10-30T17:52:11'}}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,56 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_all.to_json(f'{src_path}/test_data_gitignore/stock_quote_histories_df.json', orient='records')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # dict_all = extractor.get_all_stock_quote_histories_dict(symbols=['MBB', 'VCB', 'VIC', 'VNM'])\n",
-    "\n",
-    "\n",
-    "# import json\n",
-    "# # Write the dictionary to a JSON file\n",
-    "# try:\n",
-    "#     with open(f'{src_path}/test_data_gitignore/stock_quote_histories_dict.json', 'w') as json_file:\n",
-    "#         json.dump(dict_all, json_file, indent=4)  # Use indent for pretty-printing\n",
-    "#     print(f\"Data successfully written to {dict_all}\")\n",
-    "# except Exception as e:\n",
-    "#     print(f\"Error writing to JSON file: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +958,7 @@
        "1598"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
