[vnstock] feat: get companies data

--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -736,7 +736,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 10:44:29,944 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-11-01 10:56:25,592 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
@@ -766,14 +766,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 10:44:30,369 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-11-01 10:56:26,039 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing batch 1: ['MBB', 'VCB', 'VIC', 'VNM']\n",
+      "Processing batch 1: ['MBB', 'VCB', 'YTC']\n",
       "Fetching history for symbol: MBB\n"
      ]
     },
@@ -781,7 +781,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 10:44:33,959 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-11-01 10:56:26,670 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
@@ -795,33 +795,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-31 10:44:34,394 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
+      "2024-11-01 10:56:27,130 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching history for symbol: VIC\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-10-31 10:44:34,849 - vnstock3.common.data.data_explorer - WARNING - Thông tin niêm yết & giao dịch sẽ được truy xuất từ TCBS\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching history for symbol: VNM\n"
+      "Fetching history for symbol: YTC\n"
      ]
     }
    ],
    "source": [
-    "df_all = extractor.get_all_stock_quote_histories_df(symbols=['MBB', 'VCB', 'VIC', 'VNM'])"
+    "df_all = extractor.get_all_stock_quote_histories_df(symbols=['MBB', 'VCB', 'YTC'])"
    ]
   },
   {
@@ -834,20 +820,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16018 entries, 0 to 16017\n",
+      "RangeIndex: 8881 entries, 0 to 8880\n",
       "Data columns (total 8 columns):\n",
       " #   Column            Non-Null Count  Dtype              \n",
       "---  ------            --------------  -----              \n",
-      " 0   time              16018 non-null  datetime64[ns]     \n",
-      " 1   open              16018 non-null  float64            \n",
-      " 2   high              16018 non-null  float64            \n",
-      " 3   low               16018 non-null  float64            \n",
-      " 4   close             16018 non-null  float64            \n",
-      " 5   volume            16018 non-null  int64              \n",
-      " 6   symbol            16018 non-null  object             \n",
-      " 7   loaded_timestamp  16018 non-null  datetime64[ns, UTC]\n",
+      " 0   time              8881 non-null   datetime64[ns]     \n",
+      " 1   open              8881 non-null   float64            \n",
+      " 2   high              8881 non-null   float64            \n",
+      " 3   low               8881 non-null   float64            \n",
+      " 4   close             8881 non-null   float64            \n",
+      " 5   volume            8881 non-null   int64              \n",
+      " 6   symbol            8881 non-null   object             \n",
+      " 7   loaded_timestamp  8881 non-null   datetime64[ns, UTC]\n",
       "dtypes: datetime64[ns, UTC](1), datetime64[ns](1), float64(4), int64(1), object(1)\n",
-      "memory usage: 1001.2+ KB\n"
+      "memory usage: 555.2+ KB\n"
      ]
     }
    ],
@@ -907,64 +893,6 @@
     "for symbol, ts in max_ts.items():\n",
     "    print(symbol, ts)\n",
     "    s3_connector.update_symbol_meta_timestamp(symbol, ts, metadata_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'MBB': {'max_timestamp': '2024-10-30T17:52:11'}}\n",
-      "-----Writing file to http://localhost:9000 vnstock3 hub/metadata/stock/stock_quotes_state.json\n"
-     ]
-    }
-   ],
-   "source": [
-    "s3_connector.update_symbol_meta_latest_timestamp('MBB', mbb_ts, metadata_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'MBB': {'max_timestamp': '2024-10-30T17:52:11'}}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s3_connector.read_json_to_dict(metadata_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1598"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(extractor.get_symbols())"
    ]
   },
   {
