--- a/notebooks/work/process_stock_price.ipynb
+++ b/notebooks/work/process_stock_price.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://c79e4215fed6:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://69bf1e769c20:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -94,10 +94,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f1df83c3e20>"
+       "<pyspark.sql.session.SparkSession at 0x7fa301f5fe80>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
       "+-------------------+----+----+----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
       "|               time|open|high| low|close|volume|symbol|   loaded_timestamp|updated_at|price_range|price_percent_change|     processing_time|\n",
       "+-------------------+----+----+----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
-      "|2024-11-01 00:00:00|28.2|28.4|28.0| 28.3| 51000|   TV2|2024-11-01 05:15:20|2024-11-01| 0.39999962|0.003546045085662...|2024-12-13 04:55:...|\n",
+      "|2024-11-01 00:00:00|28.2|28.4|28.0| 28.3| 51000|   TV2|2024-11-01 05:15:20|2024-11-01| 0.39999962|0.003546045085662...|2024-12-13 07:43:...|\n",
       "+-------------------+----+----+----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
       "\n"
      ]
@@ -507,26 +507,26 @@
       "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
       "|               time| open| high|  low|close|volume|symbol|   loaded_timestamp|updated_at|price_range|price_percent_change|     processing_time|\n",
       "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
-      "|2018-10-25 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-10-31 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-11-07 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-11-14 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-11-21 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-11-22 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-11-26 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-11-27 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-12-03 00:00:00| 16.3| 16.3| 16.3| 16.3|   100|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-12-06 00:00:00|14.26|14.26|14.26|14.26|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2018-12-10 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 04:55:...|\n",
-      "|2018-12-17 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 04:55:...|\n",
-      "|2018-12-28 00:00:00|16.25|16.25|16.25|16.25|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2019-01-03 00:00:00|17.22|17.22|17.22|17.22|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 04:55:...|\n",
-      "|2019-01-09 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 04:55:...|\n",
-      "|2019-01-23 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 04:55:...|\n",
-      "|2019-01-28 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 04:55:...|\n",
-      "|2019-01-30 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 04:55:...|\n",
-      "|2019-01-31 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 04:55:...|\n",
-      "|2019-02-12 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 04:55:...|\n",
+      "|2018-10-25 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-10-31 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-11-07 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-11-14 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-11-21 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-11-22 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-11-26 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-11-27 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-12-03 00:00:00| 16.3| 16.3| 16.3| 16.3|   100|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-12-06 00:00:00|14.26|14.26|14.26|14.26|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2018-12-10 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 07:43:...|\n",
+      "|2018-12-17 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 07:43:...|\n",
+      "|2018-12-28 00:00:00|16.25|16.25|16.25|16.25|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2019-01-03 00:00:00|17.22|17.22|17.22|17.22|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:43:...|\n",
+      "|2019-01-09 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 07:43:...|\n",
+      "|2019-01-23 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 07:43:...|\n",
+      "|2019-01-28 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 07:43:...|\n",
+      "|2019-01-30 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 07:43:...|\n",
+      "|2019-01-31 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 07:43:...|\n",
+      "|2019-02-12 00:00:00|17.22|18.07|18.07|18.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.049361232018780184|2024-12-13 07:43:...|\n",
       "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
