[Spark notebook] fix: null value in loaded_timestamp

--- a/notebooks/work/process_symbol_info.ipynb
+++ b/notebooks/work/process_symbol_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -15,7 +15,7 @@
      "text": [
       "s3a://dev/data/bronze/vnstock3/symbol_exchange\n",
       "s3a://dev/data/bronze/vnstock3/symbol_industry\n",
-      "s3a://dev/data/silver/vnstock3/company_info/\n"
+      "s3a://dev/data/silver/vnstock3/symbol\n"
      ]
     },
     {
@@ -44,10 +44,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f79cd2442b0>"
+       "<pyspark.sql.session.SparkSession at 0x7f79ccd901c0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop na\n",
+    "df_exchange = raw_df_exchange.dropna(subset=[\"symbol\", \"loaded_timestamp\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,13 +190,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "window_spec = Window.partitionBy(\"symbol\").orderBy(col(\"updated_at\"), col(\"loaded_timestamp\").desc())\n",
     "\n",
-    "df_exchange = raw_df_exchange.withColumn(\"row_number\",\n",
+    "df_exchange = df_exchange.withColumn(\"row_number\",\n",
     "                  row_number().over(window_spec))\n",
     "\n",
     "df_exchange = df_exchange.filter(col(\"row_number\") == 1) \\\n",
@@ -195,18 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+-------+-----+--------+--------------------------------------------------+------------------------------+----------------+--------------------------------------+----------------+----------+\n",
-      "|symbol|id     |type |exchange|en_organ_name                                     |en_organ_short_name           |organ_short_name|organ_name                            |loaded_timestamp|updated_at|\n",
-      "+------+-------+-----+--------+--------------------------------------------------+------------------------------+----------------+--------------------------------------+----------------+----------+\n",
-      "|TV2   |8425012|STOCK|HSX     |Power Engineering Consulting Joint Stock Company 2|Power Engineering Consulting 2|Tư vấn XD Điện 2|Công ty Cổ phần Tư vấn Xây dựng Điện 2|null            |2024-11-01|\n",
-      "+------+-------+-----+--------+--------------------------------------------------+------------------------------+----------------+--------------------------------------+----------------+----------+\n",
+      "+------+-------+-----+--------+--------------------------------------------------+------------------------------+----------------+--------------------------------------+-------------------+----------+----------+\n",
+      "|symbol|id     |type |exchange|en_organ_name                                     |en_organ_short_name           |organ_short_name|organ_name                            |loaded_timestamp   |updated_at|row_number|\n",
+      "+------+-------+-----+--------+--------------------------------------------------+------------------------------+----------------+--------------------------------------+-------------------+----------+----------+\n",
+      "|TV2   |8425012|STOCK|HSX     |Power Engineering Consulting Joint Stock Company 2|Power Engineering Consulting 2|Tư vấn XD Điện 2|Công ty Cổ phần Tư vấn Xây dựng Điện 2|2024-12-21 07:52:52|2024-12-21|1         |\n",
+      "+------+-------+-----+--------+--------------------------------------------------+------------------------------+----------------+--------------------------------------+-------------------+----------+----------+\n",
       "\n"
      ]
     }
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +236,7 @@
        "2625"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -315,11 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_industry = raw_df_industry.withColumn(\"row_number\",\n",
+    "# drop na\n",
+    "df_industry = raw_df_industry.dropna(subset=[\"symbol\", \"loaded_timestamp\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_industry = df_industry.withColumn(\"row_number\",\n",
     "                  row_number().over(window_spec))\n",
     "\n",
     "df_industry = df_industry.filter(col(\"row_number\") == 1) \\\n",
@@ -328,38 +348,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+--------------------------------------+--------------------------------------------------+--------------------------+----------------+--------------------------+---------------------------+------------------+-------------------------+-------------+---------+---------+---------+---------+----------------+----------+\n",
-      "|symbol|organ_name                            |en_organ_name                                     |icb_name3                 |en_icb_name3    |icb_name2                 |en_icb_name2               |icb_name4         |en_icb_name4             |com_type_code|icb_code1|icb_code2|icb_code3|icb_code4|loaded_timestamp|updated_at|\n",
-      "+------+--------------------------------------+--------------------------------------------------+--------------------------+----------------+--------------------------+---------------------------+------------------+-------------------------+-------------+---------+---------+---------+---------+----------------+----------+\n",
-      "|TV2   |Công ty Cổ phần Tư vấn Xây dựng Điện 2|Power Engineering Consulting Joint Stock Company 2|Tư vấn & Hỗ trợ Kinh doanh|Support Services|Hàng & Dịch vụ Công nghiệp|Industrial Goods & Services|Tư vấn & Hỗ trợ KD|Business Support Services|CT           |2000     |2700     |2790     |2791     |null            |2024-11-01|\n",
-      "+------+--------------------------------------+--------------------------------------------------+--------------------------+----------------+--------------------------+---------------------------+------------------+-------------------------+-------------+---------+---------+---------+---------+----------------+----------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_industry.filter((col(\"symbol\") == \"TV2\")).show(20, truncate=False)"
+    "# df_industry.filter((col(\"symbol\") == \"TV2\")).select('loaded_timestamp', 'row_number').show(20, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1594"
+       "2625"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
