[Spark notebook] fix: null value in loaded_timestamp

--- a/notebooks/work/process_symbol_info.ipynb
+++ b/notebooks/work/process_symbol_info.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -320,7 +320,14 @@
     "    StructField(\"updated_at\", DateType(), True)\n",
     "])\n",
     "\n",
-    "raw_df_industry = spark.read.schema(schema_industry).json(bronze_path_industry)"
+    "raw_df_industry = spark.read.schema(schema_industry).json(bronze_path_industry)\n",
+    "\n",
+    "raw_df_industry = (raw_df_industry\n",
+    "    .withColumn(\n",
+    "        \"loaded_timestamp\",\n",
+    "        from_unixtime(col(\"loaded_timestamp\").cast(\"long\") / 1000).cast(TimestampType())  # Convert milliseconds to seconds\n",
+    "    )\n",
+    ")\n"
    ]
   },
   {
