--- a/notebooks/work/test.ipynb
+++ b/notebooks/work/test.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1c2bd657",
+   "metadata": {},
+   "source": [
+    "# Test S3A Connection with MinIO\n",
+    "\n",
+    "This notebook tests reading Parquet files from MinIO using Spark with S3A protocol."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a97dc309-84ba-4666-9df5-b499344a3006",
@@ -16,7 +26,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://69bf1e769c20:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://ed57cf6f1d30:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -32,7 +42,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f3258259090>"
+       "<pyspark.sql.session.SparkSession at 0x7f0b900540d0>"
       ]
      },
      "execution_count": 1,
@@ -55,7 +65,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "4a9cf668-ea2d-4ee5-bdd3-863af84c13fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'org.apache.hadoop.fs.s3a.S3AFileSystem'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark.sparkContext._jsc.hadoopConfiguration().get(\"fs.s3a.impl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "383c63fc-49f5-4ee4-bb18-58d02c22dfcb",
    "metadata": {},
    "outputs": [
@@ -66,26 +97,26 @@
       "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
       "|               time| open| high|  low|close|volume|symbol|   loaded_timestamp|updated_at|price_range|price_percent_change|     processing_time|\n",
       "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
-      "|2018-10-24 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-10-26 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-10-29 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-10-30 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-01 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-02 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-08 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-09 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-13 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-15 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-16 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-19 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-28 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-11-29 00:00:00| 16.3| 16.3| 16.3| 16.3|  1000|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-12-05 00:00:00|14.26|14.26|14.26|14.26|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-13 07:48:...|\n",
-      "|2018-12-11 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 07:48:...|\n",
-      "|2018-12-12 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 07:48:...|\n",
-      "|2018-12-13 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 07:48:...|\n",
-      "|2018-12-18 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 07:48:...|\n",
-      "|2018-12-19 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-13 07:48:...|\n",
+      "|2018-10-24 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-10-26 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-10-29 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-10-30 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-01 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-02 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-08 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-09 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-13 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-15 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-16 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-19 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-28 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-29 00:00:00| 16.3| 16.3| 16.3| 16.3|  1000|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-12-05 00:00:00|14.26|14.26|14.26|14.26|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-12-11 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-12 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-13 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-18 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-19 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
       "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -101,11 +132,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1f26a42b-84a0-4603-bc16-990b27a5d291",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S3A Implementation: org.apache.hadoop.fs.s3a.S3AFileSystem\n",
+      "S3A Endpoint: http://minio:9000\n",
+      "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
+      "|               time| open| high|  low|close|volume|symbol|   loaded_timestamp|updated_at|price_range|price_percent_change|     processing_time|\n",
+      "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
+      "|2018-10-24 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-10-26 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-10-29 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-10-30 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-01 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-02 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-08 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-09 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-13 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-15 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-16 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-19 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-28 00:00:00|13.19|13.19|13.19|13.19|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-11-29 00:00:00| 16.3| 16.3| 16.3| 16.3|  1000|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-12-05 00:00:00|14.26|14.26|14.26|14.26|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|                 0.0|2024-12-17 14:34:...|\n",
+      "|2018-12-11 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-12 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-13 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-18 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "|2018-12-19 00:00:00|14.26|15.07|15.07|15.07|     0|   A32|2024-11-01 05:16:42|2024-11-01|        0.0|0.056802205676114284|2024-12-17 14:34:...|\n",
+      "+-------------------+-----+-----+-----+-----+------+------+-------------------+----------+-----------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Spark session with JAR files load explicitly\n",
+    "spark.stop()\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "spark = (SparkSession.builder\n",
+    "    .appName(\"ReadFile\")\n",
+    "    .config(\"spark.jars\", \"/usr/local/spark/jars/hadoop-aws-3.3.4.jar,/usr/local/spark/jars/aws-java-sdk-bundle-1.12.262.jar\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.impl\", \"org.apache.hadoop.fs.s3a.S3AFileSystem\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.endpoint\", \"http://minio:9000\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.access.key\", \"minio\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.secret.key\", \"minio123\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.path.style.access\", \"true\")\n",
+    "    .config(\"spark.hadoop.fs.s3a.connection.ssl.enabled\", \"false\")\n",
+    "    .getOrCreate()\n",
+    ")\n",
+    "\n",
+    "# Verify S3A config\n",
+    "print(\"S3A Implementation:\", spark.sparkContext._jsc.hadoopConfiguration().get(\"fs.s3a.impl\"))\n",
+    "print(\"S3A Endpoint:\", spark.sparkContext._jsc.hadoopConfiguration().get(\"fs.s3a.endpoint\"))\n",
+    "\n",
+    "# Read data\n",
+    "silver_path = 's3a://dev/data/silver/vnstock3/daily_stock_prices/'\n",
+    "df_silver = spark.read.parquet(silver_path)\n",
+    "df_silver.show()"
+   ]
   }
  ],
  "metadata": {
@@ -124,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
